fix: inline wrapping

--- a/packages/website/src/pages/docs/_components/content.css
+++ b/packages/website/src/pages/docs/_components/content.css
@@ -3,24 +3,102 @@
 @tailwind utilities;
 
 .content {
-  @apply prose md:prose-base max-w-full;
+
+  /*!* Article container sizing *!*/
+  /*@media screen(lg) {*/
+  /*  margin-top: var(--header-height);*/
+  /*  margin-left: var(--sidebar-width);*/
+  /*}*/
+  /*@media screen(xl) {*/
+  /*  width: calc(100% - var(--sidebar-width));*/
+  /*}*/
+  /*&.withTOC {*/
+  /*  @media screen(xl) {*/
+  /*    width: calc(100% - var(--sidebar-width) - var(--toc-width));*/
+  /*  }*/
+  /*}*/
+
+
+  /* Default styles for text */
   *, *::marker {
     @apply text-primary-on-light;
   }
-  @apply prose-h1:font-medium prose-h1:font-machina prose-h1:break-words prose-h1:mb-5;
-  @apply prose-h2:py-2 prose-h2:my-5 prose-h2:border-b prose-h2:border-primary prose-h2:break-words;
-  @apply prose-h3:break-words;
-  @apply prose-h4:break-words;
-  @apply prose-h5:break-words;
-  @apply prose-h6:break-words;
 
-  @apply prose-td:border prose-th:border prose-td:border-secondary prose-th:border-secondary;
-  @apply prose-td:py-3 prose-td:px-6 prose-th:py-3 prose-th:px-6 prose-th:bg-secondary;
-  @apply prose-a:underline;
-  @apply prose-code:font-montreal prose-code:font-semibold;
+  /* Paragraph Styles */
+  p {
+    @apply my-4
+  }
+
+  /* List Styles */
+
+  ul {
+    @apply list-disc
+  }
+
+  ol {
+    @apply list-decimal
+  }
+
+  ul, ol {
+    @apply ml-4
+  }
+
+  li {
+    @apply my-4
+  }
+
+  /* Header Styles */
+  h1 {
+    @apply font-medium font-machina mb-5 text-display-lg
+  }
+
+  h2 {
+    @apply py-2 my-5 border-b border-primary text-display-md font-semibold tracking-wide
+  }
+
+  h3 {
+    @apply text-display-sm font-semibold mt-8 tracking-wide
+  }
+
+  h1,
+  h2,
+  h3,
+  h4,
+  h5,
+  h6 {
+    @apply break-words;
+  }
+
+  h1[id],
+  h2[id],
+  h3[id],
+  h4[id],
+  h5[id],
+  h6[id] {
+    scroll-margin-top: var(--header-height);
+  }
+
+  /* Tables Styles */
+  th, td {
+    @apply border border-gray-light-mode-400 dark:border-gray-dark-mode-800 py-3 px-6
+  }
+
+  th {
+    @apply bg-secondary;
+    white-space: nowrap;
+  }
+
+  /* Codes Styles */
+  code {
+    @apply font-montreal font-semibold text-sm
+  }
 
   code:not(pre > code)::before, code:not(pre > code)::after {
-      content: "`";
+    content: "`";
+  }
+
+  figure {
+    @apply !shadow-sm !my-4;
   }
 
   #footnote-label {
@@ -29,14 +107,12 @@
     height: unset;
   }
 
-  td {
-    @apply border border-gray-light-mode-400 dark:border-gray-dark-mode-800;
+  /* Emphasis Styles */
+  strong {
+    @apply font-semibold;
   }
 
-  figure {
-    @apply !shadow-sm;
-  }
-
+  /* Footnote Styles */
   section.footnotes {
     @apply -mx-6 px-6 py-4 bg-tertiary dark:bg-secondary;
 
@@ -50,13 +126,20 @@
   }
 
   sup a {
-    @apply text-sm font-medium border py-0.5 px-1.5 btn-secondary-on-light rounded no-underline;
+    @apply text-xs font-medium border py-0.5 px-1.5 rounded no-underline;
   }
 
+  /* Latex Styles */
   .katex-html {
     display: none;
   }
 
+  /* Link Styles */
+  a {
+    @apply underline underline-offset-4 cursor-pointer;
+  }
+
+  /* Copy Header Link Styles */
   .icon.icon-link {
     display: inline-block; /* Ensures the element behaves like an inline icon */
     width: 1rem; /* Set width for the icon */
@@ -74,35 +157,9 @@
     filter: brightness(1.2); /* Lightens the icon on hover */
   }
 
-  th {
-    white-space: nowrap;
-  }
-
+  /* Image Styles */
   img {
     @apply bg-transparent dark:bg-white;
   }
-
-  /*h1[id]::before {
-    content: '';
-    display: block;
-    height: 80px;
-    margin-top: -80px;
-  }*/
-
-  h1[id],
-  h2[id],
-  h3[id],
-  h4[id],
-  h5[id],
-  h6[id] {
-    scroll-margin-top: var(--header-height);
-  }
-
-  a {
-    @apply underline-offset-4 cursor-pointer;
-  }
-
-  div[role="alert"] a {
-    @apply text-primary-on-dark;
-  }
 }
+
